Add "requirements" to title of document
Changed document title to: "Use Cases and Requirements for Decentralized Identifiers"
changed published date

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8"> 
-    <title>Use Cases for Decentralized Identifiers</title>
+    <title>Use Cases and Requirements for Decentralized Identifiers</title>
     <script
      src="https://www.w3.org/Tools/respec/respec-w3c-common"
      class="remove"></script>
@@ -15,7 +15,7 @@
         shortName: "did-use-cases",
 
         // subtitle
-        subtitle: "Draft Community Group Report 11 February 2019",
+        subtitle: "Draft Working Group Report 5 November 2019",
 
         // if you wish the publication date to be other than today, set this
         // publishDate:  "2009-08-06",
