Add terminology section. Fixes #12.

--- a/index.html
+++ b/index.html
@@ -83,6 +83,10 @@
         <p>This document attempts to explain what you can do with DIDs and why you might care to use them. We start by describing the basic conceptual framework for DIDs, including basic terminology, followed by the actions one can take with a DID. Then we introduce the defining features and benefits of DIDs along with five focal use cases illustrating those features and benefits. 
         </p>
       </section>
+    <section class="informative">
+        <h1>Terminology</h1>
+        <div data-include="terms.html" data-oninclude="restrictReferences"></div>
+    </section>
     <section>
       <h2>What can you do with a DID?</h2>
         <p>Decentralized  identifiers enable several key actions by individual actors. These actions are  the functional interface for working with DIDs and involve three entities. The Controller,  the Relying Party, and the Subject.</p>
