Add references to [[DID-CORE]].

--- a/terms.html
+++ b/terms.html
@@ -14,7 +14,7 @@ A globally unique identifier that does
 not require a centralized registration authority because it is
 registered with <a>distributed ledger technology</a> (DLT) or other form of
 decentralized network. The generic format of a DID is defined in the DID
-specification. A specific <a>DID scheme</a> is defined in a
+specification [[DID-CORE]]. A specific <a>DID scheme</a> is defined in a
 <a>DID method</a> specification.
   </dd>
 
@@ -86,7 +86,7 @@ DID query, and optional <code>#</code> character followed by a DID fragment.
 
   <dd>
 The formal syntax of a <a>decentralized identifier</a>. The generic DID
-scheme is defined in the DID specification. Separate <a>DID method</a> specifications
+scheme is defined in the DID specification [[DID-CORE]]. Separate <a>DID method</a> specifications
 define a specific DID scheme that works with that specific <a>DID method</a>.
   </dd>
 
