Fixing editors in line with W3C policy

--- a/index.html
+++ b/index.html
@@ -39,14 +39,16 @@
 
         editors: [{
           name: "Joe Andrieu", 
-          company: "Legendary Requirements",
-          companyURL: "http://legreq.com" },
-
+          company: "Invited Expert",
+          url: "http://legreq.com",
+          w3cid: 97261
+        },
       	{
           name: "Phil Archer",
           url: "https://philarcher.org/",
           companyURL: "https://www.gs1.org",
-          company: "GS1"
+          company: "GS1",
+          w3cid: 101627
         }],
         wgPublicList: "public-did-wg",
         wg: "Decentralized Identifier Working Group",
