switched Alice/Bob/Charlie to Alicia/Barkley/Connor for memorability; clarified Althea is a psuedonym

--- a/index.html
+++ b/index.html
@@ -743,7 +743,7 @@
       <section>
         <h4>Background</h4>
         <p>
-          Alice wants help with her urinary tract infection (UTI) and is a bit
+          Alicia wants help with her urinary tract infection (UTI) and is a bit
           touchy about her privacy. In the old days, she would have to make an
           appointment in-person and get a paper prescription to take to a
           pharmacy. She wants to save money and have peace of mind.
@@ -752,32 +752,33 @@
       <section>
         <h4>Description</h4>
         <p>
-          Because she lives in Seattle, Alice is in a state that allows Planned
+          Because she lives in Seattle, Alicia is in a state that allows Planned
           Parenthood to diagnose and prescribe online
-          https://www.plannedparenthood.org/get-care/get-care-online . Alice
+          https://www.plannedparenthood.org/get-care/get-care-online . Alicia
           uses the identity wallet on her iPhone to register with the online
           medical practice. She tells the online practice her name is Althea
+          (a psuedonym)
           with password-less authentication and a verified driver's license
           credential to prove that she's a WA resident. The remote physician,
-          Bob, is licensed by the WA Board of Medicine and credentialed by
+          Barkley, is licensed by the WA Board of Medicine and credentialed by
           Planned Parenthood of WA, Inc. He's securely signed in using the
-          identity wallet on his smartphone. Bob issues Alice a digital
-          prescription in the form of a verifiable credential and allows Alice
-          to download it however she pleases. Alice is a librarian and trusts
+          identity wallet on his smartphone. Barkley issues Alicia a digital
+          prescription in the form of a verifiable credential and allows Alicia
+          to download it however she pleases. Alicia is a librarian and trusts
           her local public library to erase their logs as allowed by law. She
           uses one of their computers to sign-in and do all of this. She snaps
           a picture of the QR code that is the prescription to take to the
-          pharmacy. Charlie, the licensed pharmacist, scans the prescription
-          QR code and fills the prescription. Alice pays cash.
+          pharmacy. Connor, the licensed pharmacist, scans the prescription
+          QR code and fills the prescription. Alicia pays cash.
         </p>
       </section>
       <section>
         <h4>Challenges</h4>
         <p>
-          The challenge of this particular use-case is that only Bob and
-          Charlie are verified identities and accountable for their interaction
-          with Alice. Alice can be anonymous or pairwise-pseudonymous with both
-          Bob and Charlie and everything just works. Alice, Bob, and Charlie
+          The challenge of this particular use-case is that only Barkley and
+          Connor are verified identities and accountable for their interaction
+          with Alicia. Alicia can be anonymous or pairwise-pseudonymous with both
+          Barkley and Connor and everything just works. Alicia, Barkley, and Connor
           all keep separate and legally authentic copies of the records of their
           interaction in case of dispute.
         </p>
@@ -788,9 +789,9 @@
           The Prescription use-case is a common and high-value example of
           privacy engineering as we shift to convenient and cost-effective
           online commerce among licensed and unlicensed individuals as peers.
-          Bob and Charlie benefit by reducing or even eliminating the influence
+          Barkley and Connor benefit by reducing or even eliminating the influence
           of their respective institutions or employers and therefore make more
-          money. They pass some savings to Alice who also gets increased peace
+          money. They pass some savings to Alicia who also gets increased peace
           of mind.
         </p>
       </section>
