Fix markup for pubrules

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         //subtitle: "Draft  11 February 2019",
 
         // if you wish the publication date to be other than today, set this
-        // publishDate:  "2009-08-06",
+        // publishDate:  "2019-11-21",
 
         // if there is a previously published draft, uncomment this and set its YYYY-MM-DD date
         // and its maturity status
@@ -267,7 +267,7 @@ https://example.com/page.html
       <p class="ednote">This section currently unchanged from CG's document - needs to be updated.</p>
         <p>Here are the  thirteen (13) actions currently supported by DIDs as envisioned by Credentials  Community Group and as intended in the DID Working Group Charter. </p>
         <p>In the diagram,  we have grouped the actions by Create, Read, Update, and Delete (CRUD) as well  as Use.</p>
-            <img src="images/did_actions.png"/>
+            <img src="images/did_actions.png" alt="Actions supported by DIDs, grouped by type, and related to the entity which carries out the action"/>
         <section id="create">
         <h2>Create</h2>
         <p>Controllers create DIDs, uniquely binding cryptographic  proofs with the identifier, typically using public-private key-pairs. These  DIDs are recorded in a registry in such a manner as to be able to resolve to a  DID Document. The DID Document may be dynamically and deterministically  generated through resolution or it may be explicitly constructed as a  stand-alone resource and either stored or referenced in the registry. This  process needs access to the registry, ideally a decentralized system, and like  the rest of the DID CRUD actions, can be performed without interaction with any  particular authority.</p>
@@ -910,7 +910,7 @@ https://example.com/page.html
     </section>
     <section id="law">
       <h3>Digital Executor (law)</h3>
-      <section id="law"Background>
+      <section id="lawBackground">
         <h4>Background</h4>
         <p>
           Today, when people die, there are no standard technologies for heirs,
