Updated the ReSpec header: noRecTrack
I have added the `noRecTrack:true` statement. 

This ensures that the generated status Working Draft does not include the line (as now): "This document is intended to become a W3C Recommendation."

@rhiaro

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         wgPatentURI: "https://www.w3.org/2004/01/pp-impl/117488/status",
         maxTocLevel: 4,
         inlineCSS: true,
+	noRecTrack: true,
 
         localBiblio: {
       	  "DID-RESOLUTION" : {
